MiniRust.jj
PARSER_BEGIN(MiniRust)
import java.io.*;
import java.util.ArrayList;
import ast.*;
public class MiniRust {

  public static void main(String args[]) throws ParseException,IOException{
    
 	MiniRust parser = new MiniRust(new FileInputStream(args[0]));
 	Prog arvore = parser.MiniRust();
  }
}

PARSER_END(MiniRust)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
}

TOKEN :
{
  <MAIN:       "main"       >
| <FN:         "fn"         >  
| <LET:        "let"        >
| <PRINTLN:    "println!"   >
| <READFLOAT:  "read_float" >
| <IF:         "if"         >  
| <WHILE:      "while"      >
| <RETURN:     "return"     > 
| <APAR:       "("          >
| <FPAR:       ")"          >  
| <BEGIN:      "{"          >
| <END:        "}"          >
| <COLON:      ":"          >
| <SEMICO:     ";"          >
| <COMMA:      ","          >
| <SUM:        "+"          >
| <SUB:        "-"          >
| <MULT:       "*"          >
| <DIV:        "/"          >
| <AND:        "&&"         >
| <OR:         "||"         >
| <LESSTHEN:   "<"          >
| <MORETHEN:   ">"          >
| <EQUAL:      "=="         >
| <ATRIB:      "="          >
| <FLOAT32:    "f32"        >
| <VOID:       "void"       >
| <BOOL:       "bool"       >
| <TRUE:       "true"       >
| <FALSE:      "false"      >
| <ARROW:      "->"         >
}

TOKEN :
{
  <#DIGIT : ["0"-"9"] >
 |<#LETTER : ["a"-"z","A"-"Z"] >
 |<NUM : (<DIGIT>)+("."(<DIGIT>)+)? ("E"("+" | "-")? (<DIGIT>)+)?>
 |< ID: (<LETTER>) (<LETTER> | <DIGIT>)* ("_"(<LETTER> | <DIGIT>)+)*>

}


Prog MiniRust() : {	
	Main main = null;
	ArrayList<Fun> func = new ArrayList();
}
{
	main = Main() (Func(func))? 
	
	{
		return new Prog(main, func);}
}
Main Main() : { 
	ArrayList<VarDecl> vars = new ArrayList();
	ArrayList<Comando> coms = new ArrayList();
}
{
	<FN> <MAIN> <APAR> <FPAR> <BEGIN> VarDecl(vars) SeqComandos(coms) <END>
	{
		return new Main(vars, coms);}
}

void VarDecl(ArrayList<VarDecl> vars) : {	
	Token var = null; 
	String tipo = null;
}
{
	(<LET> var = <ID> <COLON> tipo = Tipo() <SEMICO> {vars.add( new VarDecl(tipo, var.image));})*
}

String Tipo() : {
	Token tipo = null;
}
{
	(tipo = <FLOAT32> | tipo = <BOOL> | tipo = <VOID>)
	{
		return tipo.image;}
}

void SeqComandos(ArrayList<Comando> coms) : {
	Comando comando = null;}
{
	(comando = Comando() {coms.add(comando);})*
}


Comando Comando() : {
	Token id = null;
	Exp exp = null;
	ArrayList<Exp> args = new ArrayList<Exp>();
	ArrayList<Comando> comandos;
}{
	id = <ID>(
			<ATRIB> 
				(<READFLOAT> <APAR> <FPAR> <SEMICO> {return new CReadInput(0, id.image);} 
				| exp = Exp() <SEMICO> {return new CAtribuicao(0, id.image, exp);})
			| <APAR> (ListaExp(args) )? <FPAR> <SEMICO> {return new CChamadaFun(0, id.image, args);})  

	| (<IF> 	{comandos = new ArrayList();}
		exp = Exp() <BEGIN> SeqComandos(comandos) <END> <SEMICO>) {return new CIf(0, exp, comandos);}
	
	| (<WHILE> 	{comandos = new ArrayList();}
		exp = Exp() <BEGIN> SeqComandos(comandos) <END> <SEMICO>) {return new CWhile(0, exp, comandos);}
	
	| (<RETURN> exp = Exp() <SEMICO>)	{return new CReturn(0, exp);}	      
	| (<PRINTLN> exp = Exp() <SEMICO>) {return new CPrint(0, exp);}
}


Exp Exp() : {
	Exp e1;
	Exp e2;
	String op;
	Exp e;
}{
	<APAR> e1 = Exp() op = Op() e2 = Exp() <FPAR> {return new EOpExp(op, e1,e2);}
	| 

	e = Fator() {return e;}
}

Exp Fator() :{
	Token id = null;
	Token num = null;
	ArrayList<Exp> args = new ArrayList<Exp>();
	boolean flag_func = false;
}
{
	( id = <ID> ( <APAR> (ListaExp(args))? <FPAR> { flag_func = true; } )? )
	{
		if (flag_func) return new EChamadaFun(id.image, args);
		else return new EVar(id.image);
	}
	| num = <NUM> { return new EFloat(Float.parseFloat(num.image)); }
	| <TRUE>  { return new ETrue(); }
	| <FALSE> { return new EFalse(); }
}


String Op() :{ 
	Token op = null; }
{
  ( op = <SUM> | op = <SUB> | op = <MULT> | op = <DIV>
  | op = <AND> | op = <OR> | op = <LESSTHEN> | op = <MORETHEN> | op = <EQUAL> )
  { return op.image; }
}


void ListaExp(ArrayList<Exp> exps) : {
	Exp e;
} {
	e = Exp(){exps.add(e);}(<COMMA> e = Exp() {exps.add(e);})*
}


void Func(ArrayList<Fun> funs):{
	Token nome = null;
    ArrayList<ParamFormalFun> params;
    String retorno = null;
    ArrayList<VarDecl> vars;
    ArrayList<Comando> body;
}{
	({
    params = new ArrayList();
    vars = new ArrayList();
    body = new ArrayList();

	}<FN> nome =<ID> <APAR> (ListaArg(params))? <FPAR> <ARROW> retorno=Tipo() <BEGIN> VarDecl(vars) SeqComandos(body) <END> 
	{funs.add(new Fun(nome.image, params, retorno, vars, body));})+

}

void ListaArg(ArrayList<ParamFormalFun> funparams):{
	Token var;
	String type;
}{ 
  var = <ID> <COLON> type = Tipo(){
	funparams.add(new ParamFormalFun(type, var.image));}
	 (<COMMA> var = <ID> <COLON> type = Tipo(){
	funparams.add(new ParamFormalFun(type, var.image));})*  
}

