MiniRust.java
/* Generated By:JavaCC: Do not edit this line. MiniRust.java */
import java.io.*;
import java.util.ArrayList;
import ast.*;
public class MiniRust implements MiniRustConstants {

  public static void main(String args[]) throws ParseException,IOException{

        MiniRust parser = new MiniRust(new FileInputStream(args[0]));
        Prog arvore = parser.MiniRust();
        geraCodigo(arvore, args[0]);
  }

  public static void geraCodigo(Prog arvore, String arquivo) throws IOException {
        arquivo = arquivo.replace(".rs", ".java");
        String nomeMain = arquivo.replace(".java", "");
        FileWriter writer = new FileWriter("out/" + arquivo);
        arvore.setNomeMain(nomeMain);
        writer.write(arvore.GERA_JAVA());
        writer.close();
  }

  static final public Prog MiniRust() throws ParseException {
        Main main = null;
        ArrayList<Fun> func = new ArrayList();
    main = Main();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FN:
      Func(func);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
                {if (true) return new Prog(main, func);}
    throw new Error("Missing return statement in function");
  }

  static final public Main Main() throws ParseException {
        ArrayList<VarDecl> vars = new ArrayList();
        ArrayList<Comando> coms = new ArrayList();
    jj_consume_token(FN);
    jj_consume_token(MAIN);
    jj_consume_token(APAR);
    jj_consume_token(FPAR);
    jj_consume_token(BEGIN);
    VarDecl(vars);
    SeqComandos(coms);
    jj_consume_token(END);
                {if (true) return new Main(vars, coms);}
    throw new Error("Missing return statement in function");
  }

  static final public void VarDecl(ArrayList<VarDecl> vars) throws ParseException {
        Token var = null;
        String tipo = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LET:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(LET);
      var = jj_consume_token(ID);
      jj_consume_token(COLON);
      tipo = Tipo();
      jj_consume_token(SEMICO);
                                                          vars.add( new VarDecl(tipo, var.image));
    }
  }

  static final public String Tipo() throws ParseException {
        Token tipo = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FLOAT32:
      tipo = jj_consume_token(FLOAT32);
      break;
    case BOOL:
      tipo = jj_consume_token(BOOL);
      break;
    case VOID:
      tipo = jj_consume_token(VOID);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return tipo.image;}
    throw new Error("Missing return statement in function");
  }

  static final public void SeqComandos(ArrayList<Comando> coms) throws ParseException {
        Comando comando = null;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRINTLN:
      case IF:
      case WHILE:
      case RETURN:
      case ID:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      comando = Comando();
                              coms.add(comando);
    }
  }

  static final public Comando Comando() throws ParseException {
        Token id = null;
        Exp exp = null;
        ArrayList<Exp> args = new ArrayList<Exp>();
        ArrayList<Comando> comandos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      id = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIB:
        jj_consume_token(ATRIB);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case READFLOAT:
          jj_consume_token(READFLOAT);
          jj_consume_token(APAR);
          jj_consume_token(FPAR);
          jj_consume_token(SEMICO);
                                                                     {if (true) return new CReadInput(0, id.image);}
          break;
        case APAR:
        case TRUE:
        case FALSE:
        case NUM:
        case ID:
          exp = Exp();
          jj_consume_token(SEMICO);
                                                        {if (true) return new CAtribuicao(0, id.image, exp);}
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case APAR:
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case NUM:
        case ID:
          ListaExp(args);
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
        jj_consume_token(SEMICO);
                                                                     {if (true) return new CChamadaFun(0, id.image, args);}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case IF:
      jj_consume_token(IF);
                         comandos = new ArrayList();
      exp = Exp();
      jj_consume_token(BEGIN);
      SeqComandos(comandos);
      jj_consume_token(END);
      jj_consume_token(SEMICO);
                                                                           {if (true) return new CIf(0, exp, comandos);}
      break;
    case WHILE:
      jj_consume_token(WHILE);
                         comandos = new ArrayList();
      exp = Exp();
      jj_consume_token(BEGIN);
      SeqComandos(comandos);
      jj_consume_token(END);
      jj_consume_token(SEMICO);
                                                                           {if (true) return new CWhile(0, exp, comandos);}
      break;
    case RETURN:
      jj_consume_token(RETURN);
      exp = Exp();
      jj_consume_token(SEMICO);
                                                 {if (true) return new CReturn(0, exp);}
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      exp = Exp();
      jj_consume_token(SEMICO);
                                            {if (true) return new CPrint(0, exp);}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
        Exp e1;
        Exp e2;
        String op;
        Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
      jj_consume_token(APAR);
      e1 = Exp();
      op = Op();
      e2 = Exp();
      jj_consume_token(FPAR);
                                                       {if (true) return new EOpExp(op, e1,e2);}
      break;
    case TRUE:
    case FALSE:
    case NUM:
    case ID:
      e = Fator();
                     {if (true) return e;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Fator() throws ParseException {
        Token id = null;
        Token num = null;
        ArrayList<Exp> args = new ArrayList<Exp>();
        boolean flag_func = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      id = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case APAR:
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case NUM:
        case ID:
          ListaExp(args);
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
                                                        flag_func = true;
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
                if (flag_func) {if (true) return new EChamadaFun(id.image, args);}
                else {if (true) return new EVar(id.image);}
      break;
    case NUM:
      num = jj_consume_token(NUM);
                        {if (true) return new EFloat(Float.parseFloat(num.image));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
                    {if (true) return new ETrue();}
      break;
    case FALSE:
      jj_consume_token(FALSE);
                    {if (true) return new EFalse();}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String Op() throws ParseException {
        Token op = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUM:
      op = jj_consume_token(SUM);
      break;
    case SUB:
      op = jj_consume_token(SUB);
      break;
    case MULT:
      op = jj_consume_token(MULT);
      break;
    case DIV:
      op = jj_consume_token(DIV);
      break;
    case AND:
      op = jj_consume_token(AND);
      break;
    case OR:
      op = jj_consume_token(OR);
      break;
    case LESSTHEN:
      op = jj_consume_token(LESSTHEN);
      break;
    case MORETHEN:
      op = jj_consume_token(MORETHEN);
      break;
    case EQUAL:
      op = jj_consume_token(EQUAL);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return op.image;}
    throw new Error("Missing return statement in function");
  }

  static final public void ListaExp(ArrayList<Exp> exps) throws ParseException {
        Exp e;
    e = Exp();
                  exps.add(e);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      e = Exp();
                                                   exps.add(e);
    }
  }

  static final public void Func(ArrayList<Fun> funs) throws ParseException {
        Token nome = null;
    ArrayList<ParamFormalFun> params;
    String retorno = null;
    ArrayList<VarDecl> vars;
    ArrayList<Comando> body;
    label_4:
    while (true) {
    params = new ArrayList();
    vars = new ArrayList();
    body = new ArrayList();
      jj_consume_token(FN);
      nome = jj_consume_token(ID);
      jj_consume_token(APAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ListaArg(params);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(FPAR);
      jj_consume_token(ARROW);
      retorno = Tipo();
      jj_consume_token(BEGIN);
      VarDecl(vars);
      SeqComandos(body);
      jj_consume_token(END);
         funs.add(new Fun(nome.image, params, retorno, vars, body));
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FN:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_4;
      }
    }
  }

  static final public void ListaArg(ArrayList<ParamFormalFun> funparams) throws ParseException {
        Token var;
        String type;
    var = jj_consume_token(ID);
    jj_consume_token(COLON);
    type = Tipo();
        funparams.add(new ParamFormalFun(type, var.image));
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      var = jj_consume_token(ID);
      jj_consume_token(COLON);
      type = Tipo();
        funparams.add(new ParamFormalFun(type, var.image));
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MiniRustTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[17];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0x80,0xc0000000,0x1d00,0x2200,0x2000,0x20002000,0x1d00,0x2000,0x2000,0x2000,0x0,0x1ff00000,0x80000,0x0,0x40,0x80000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x1,0x80,0xc6,0xc6,0x0,0x80,0xc6,0xc6,0x0,0xc6,0x0,0x0,0x80,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public MiniRust(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MiniRust(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MiniRustTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MiniRust(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MiniRustTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MiniRust(MiniRustTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MiniRustTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[40];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 17; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 40; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
